--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding by CodingNepal - youtube.com/@codingnepal -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -135,27 +134,27 @@
             <div class="slider-wrapper">
               <ul class="testimonials-list swiper-wrapper">
                 <li class="testimonial swiper-slide">
-                  <img src="C:\Users\KASHISH\Downloads\WhatsApp Image 2025-11-12 at 9.32.57 PM.jpeg" alt="User" class="user-image" />
+                  <img src="https://drive.google.com/open?id=1WGXj6-SV0otqwyvVmDl9toK3PIW6Zf2N&usp=drive_fs" alt="User" class="user-image" />
                   <h3 class="name">MRS. NISHA  </h3>
                   <i class="feedback">"Loved the French roast. Perfectly balanced and rich. Will order again!"</i>
                 </li>
                 <li class="testimonial swiper-slide">
-                  <img src="C:\Users\KASHISH\Downloads\WhatsApp Image 2025-11-12 at 10.08.57 PM.jpeg" alt="User" class="user-image" />
+                  <img src=" https://drive.google.com/open?id=17NQ_aKeFmR9T9sQzLVbbfMylACFpZ3lh&usp=drive_fs" alt="User" class="user-image" />
                   <h3 class="name">MR.RISHABH MITTAL</h3>
                   <i class="feedback">"Great espresso blend! Smooth and bold flavor. Fast shipping too!"</i>
                 </li>
                 <li class="testimonial swiper-slide">
-                  <img src= "C:\Users\KASHISH\Downloads\WhatsApp Image 2025-11-12 at 9.41.21 PM.jpeg" alt="User" class="user-image" />
+                  <img src= "https://drive.google.com/open?id=1BnN522RNmGqhjUMyS3MAuNXu_iCOQLZt&usp=drive_fs" alt="User" class="user-image" />
                   <h3 class="name">MR.MONU GOYAL</h3>
                   <i class="feedback">"Fantastic mocha flavor. Fresh and aromatic. Quick shipping!"</i>
                 </li>
                 <li class="testimonial swiper-slide">
-                  <img src= "C:\Users\KASHISH\Downloads\WhatsApp Image 2025-11-12 at 9.47.27 PM.jpeg" alt="User" class="user-image" />
+                  <img src= "https://drive.google.com/open?id=1NjTrDgYVh6soMGfh2tpGbMDVItRjK42a&usp=drive_fs" alt="User" class="user-image" />
                   <h3 class="name">MISS.RITIKA</h3>
                   <i class="feedback">"Excellent quality! Fresh beans and quick delivery. Highly recommend."</i>
                 </li>
                 <li class="testimonial swiper-slide">
-                  <img src="C:\Users\KASHISH\Downloads\WhatsApp Image 2025-11-12 at 9.41.20 PM.jpeg" alt="User" class="user-image" />
+                  <img src="https://drive.google.com/open?id=1UnXeA6OJrb_VSrkXDPfhtWjVRs8jI2YH&usp=drive_fs" alt="User" class="user-image" />
                   <h3 class="name">MRS. TAMMANA MITTAL</h3>
                   <i class="feedback">"Best decaf I've tried! Smooth and flavorful. Arrived promptly."</i>
                 </li>
@@ -258,4 +257,5 @@
     <script src="script.js"></script>
 
   </body>
+
 </html>
