--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Coding by CodingNepal - youtube.com/@codingnepal -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -55,7 +56,7 @@
             </div>
           </div>
           <div class="hero-image-wrapper">
-            <img src="https://fikacoffee.com/cdn/shop/files/39-FikaCollection2.jpg?v=1750272560&width=5760" alt="Coffee" class="hero-image" />
+            <img src="" alt="Coffee" class="hero-image" />
           </div>
         </div>
       </section>
@@ -257,6 +258,4 @@
     <script src="script.js"></script>
 
   </body>
-
 </html>
-
