--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="hero-image-wrapper">
-            <img src="" alt="Coffee" class="hero-image" />
+            <img src="https://fikacoffee.com/cdn/shop/files/39-FikaCollection2.jpg?v=1750272560&width=5760" alt="Coffee" class="hero-image" />
           </div>
         </div>
       </section>
@@ -258,4 +258,5 @@
     <script src="script.js"></script>
 
   </body>
+
 </html>
